--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+beautifulsoup4==4.12.3
 blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 Flask==3.1.0
+idna==3.10
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
@@ -10,6 +14,9 @@ packaging==24.2
 pluggy==1.5.0
 psycopg2-binary==2.9.10
 pytest==8.3.4
+requests==2.32.3
+soupsieve==2.6
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
